# tempestweb

./: .gitignore  .lighthouserc.json  CHANGELOG.md  CLAUDE.md  Makefile  NOTES-T10.md  NOTES-T3.md  NOTES-T4.md  NOTES-T5.md  QUALITY-T1.md  QUALITY-T10.md  QUALITY-T2.md  QUALITY-T4.md  QUALITY-T5.md  QUALITY-T6.md  QUALITY-T7.md  QUALITY-T9.md  README.md  REVIEW-T1.md  REVIEW-T10.md  REVIEW-T2.md  REVIEW-T3.md  REVIEW-T4.md  REVIEW-T5.md  REVIEW-T6.md  REVIEW-T7.md  REVIEW-T8.md  REVIEW-T9.md  REVIEW-p2-offline-hardening.md  SECURITY.md  SUMMARY-T1.md  SUMMARY-T10.md  SUMMARY-T2.md  SUMMARY-T3.md  SUMMARY-T4.md  SUMMARY-T5.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.claude/agents/: tw-docs.md  tw-js.md  tw-python.md  tw-qa.md  tw-quality.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  pwa.yml
benchmarks/: bench_reconcile.py
client/: constants.js  dom.js  events.js  livereload.js  router.js  style.js  tempestweb.js  theme.js  transport-sse.js  transport-wasm.js  transport-ws.js  transport.js  virtualize.js
client/icons/: index.js  lucide.js  material.js
client/native/: audio.js  badge.js  battery.js  bgsync.js  bluetooth.js  camera.js  clipboard.js  contacts.js  cookies.js  eyedropper.js  file.js  filesystem.js  fullscreen.js  gamepad.js  geolocation.js  hid.js  http.js  idb-kv.js  idle.js  index.js  install.js  midi.js  network.js  nfc.js  notifications.js  offline.js  onnx.js  orientation.js  payment.js  pip.js  pointerlock.js  quota.js  recorder.js  sensors.js  serial.js  share.js  speech.js  storage.js  sync.js  tabs.js  (+6 more)
client/offline/: asset-cache.js  pull.js  store.js  sw-bridge.js  sync-status.js  sync.js
client/push/: web-push-client.js
client/pwa/: connectivity-banner.js  install-prompt.js  manifest.js  post-install-redirect.js  register.js  sw.js  update-prompt.js
client/sw/: register.js  sw.js
client/transpile/: animation.js  components.js  counter.gen.js  diff.js  i18n.js  index.html  media.js  motion.js  native.js  nav.js  runtime.js  spacing.gen.js  theme.js  validators.js  widget-styles.gen.js  widget-support.js  widgets.gen.js  widgets.js
docs/: architecture.en.md  architecture.md  arquitetura.md  best-practices.en.md  best-practices.md  capabilities.en.md  capabilities.md  cli.en.md  cli.md  components.en.md  components.md  contract.md  deploy.en.md  deploy.md  design-docs.en.md  design-docs.md  icons.en.md  icons.md  index.en.md  index.md  installation.en.md  installation.md  modo-c-transpile.md  native-events.en.md  native-events.md  native-modo-c.md  native-reference.en.md  native-reference.md  observability.en.md  observability.md  offline-sync.en.md  offline-sync.md  openapi.en.md  openapi.md  plan.md  pwa.en.md  pwa.md  roadmap.md  routing.en.md  routing.md  (+14 more)
docs/agents/: MANIFEST.md  overnight-workflow.js  permissions.suggested.json
docs/examples/: auth-jwt.en.md  auth-jwt.md  br-cadastro.en.md  br-cadastro.md  charts-dashboard.en.md  charts-dashboard.md  chat-ui.en.md  chat-ui.md  clipboard-share.en.md  clipboard-share.md  core-app-shell.en.md  core-app-shell.md  core-feedback.en.md  core-feedback.md  core-profile-cards.en.md  core-profile-cards.md  core-tabbed-settings.en.md  core-tabbed-settings.md  dashboard-shell.en.md  dashboard-shell.md  data-grid.en.md  data-grid.md  data-table.en.md  data-table.md  device-panel.en.md  device-panel.md  error-boundary.en.md  error-boundary.md  faq-accordion.en.md  faq-accordion.md  feature-flags.en.md  feature-flags.md  fetch.en.md  fetch.md  file-storage.en.md  file-storage.md  form.en.md  form.md  i18n-greeting.en.md  i18n-greeting.md  (+50 more)
docs/tutorial/: index.en.md  index.md  modes.en.md  modes.md  patches.en.md  patches.md  state.en.md  state.md  view.en.md  view.md
examples/a11y_demo/: app.py
examples/anim_demo/: app.py
examples/async_demo/: app.py
examples/auth-jwt/: app.py
examples/br-cadastro/: app.py
examples/charts-dashboard/: app.py
examples/chat-ui/: app.py
examples/clipboard-share/: app.py
examples/core-app-shell/: app.py
examples/core-feedback/: app.py
examples/core-profile-cards/: app.py
examples/core-tabbed-settings/: app.py
examples/counter/: app.py
examples/dashboard-shell/: app.py
examples/data-grid/: app.py
examples/data-table/: app.py
examples/deploy/: Dockerfile  docker-compose.yml  nginx.conf
examples/device-panel/: app.py
examples/error-boundary/: app.py
examples/faq-accordion/: app.py
examples/feature-flags/: app.py
examples/fetch/: app.py
examples/file-storage/: app.py
examples/form/: app.py
examples/geo_demo/: app.py
examples/gesture_demo/: app.py
examples/i18n-greeting/: app.py
examples/image-gallery/: app.py
examples/kanban-board/: app.py
examples/list_demo/: app.py
examples/login-form/: app.py
examples/login_demo/: app.py
examples/notification-center/: app.py
examples/offline-queue/: app.py
examples/onboarding-carousel/: app.py
examples/overlay_demo/: app.py
examples/photo-capture/: app.py
examples/pwa-webpush/: app.py  build_pwa.py
examples/quiz-app/: app.py
examples/rating-review/: app.py
examples/router-drawer/: app.py
examples/router_demo/: app.py
examples/search-autocomplete/: app.py
examples/server-mode/: serve.py
examples/settings-panel/: app.py
examples/signup-wizard/: app.py
examples/sketch-canvas/: app.py
examples/stopwatch/: app.py
examples/tabs-profile/: app.py
examples/temperature-converter/: app.py
examples/theme-switcher/: app.py
examples/todo/: app.py
examples/transpile-tour/: app.py  tempestweb.toml
examples/weather-native/: app.py
examples/webpush-server/: server.py
public/: gen_manifest.py  index.html  manifest.json
scripts/: pwa-gate.mjs
tempestweb/: __init__.py  icons.py
tempestweb/_core/: __init__.py  animation.py  devices.py  i18n.py  icons.py  navigation.py  style.py  theme.py  validators.py
tempestweb/cli/: __init__.py  config.py  loader.py  main.py  quality.py  scaffold.py
tempestweb/components/: __init__.py  buttons.py  fields.py  forms.py  (+1 more)
tests/: conftest.py
(+300 files in other folders)
