[project]
name = "tempestweb"
version = "0.40.0"
description = "Build web apps in typed Python — one tree, a DOM renderer, three execution modes (WASM + server + transpile)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mauricio Benjamin", email = "mauricio.benjamin@reloverelations.com" }]
dependencies = [
    # Renderer-agnostic UI core (IR/reconciler/state/style/widgets) — the single
    # source of truth, imported directly as ``tempest_core``. pydantic comes
    # transitively via it.
    "tempest-core>=0.11.0",
]

[project.optional-dependencies]
# Mode B — Python on the server, thin JS client over WebSocket.
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12",
]
# CLI + dev loop.
cli = [
    "watchfiles>=0.21",
    # Round-trip TOML editing for `tempestweb sync` (preserves comments/format).
    "tomlkit>=0.13",
]
# Server-side WebPush (P3). Mirrors tempest-fastapi-sdk[webpush]; lazily imported
# so tempestweb.server.webpush imports without it (the dep is touched only on send).
webpush = [
    "pywebpush>=1.14",
]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    # Test client for the FastAPI/Starlette app (WebSocket + HTTP/SSE).
    "httpx>=0.27",
]
# Bilingual MkDocs documentation site (PT-BR default + EN-US under /en/).
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-static-i18n>=1.2",
]

[project.scripts]
tempestweb = "tempestweb.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tempestweb"]

# The pure-JS client lives at the repo root (shared, build-step-free). Ship it
# inside the wheel under tempestweb/_client so `tempestweb build` finds it when
# installed from PyPI (it is the leaf renderer copied into every artifact).
[tool.hatch.build.targets.wheel.force-include]
"client" = "tempestweb/_client"

# The sdist also needs the client/ tree (it is outside the package dir).
[tool.hatch.build.targets.sdist]
include = ["tempestweb", "client", "README.md", "CHANGELOG.md", "pyproject.toml"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Mirrors tempestroid / tempest-fastapi-sdk: annotations (ANN) and docstrings (D)
# are part of the gate, not optional.
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "Q", "ANN", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
# Tests and examples are exempt from docstring/annotation ceremony.
"tests/*" = ["D", "ANN"]
"examples/*" = ["D"]

[tool.ruff.lint.isort]
# Pin first-party so import ordering is deterministic regardless of what is
# installed: ruff's auto-detection classifies tempestweb/tempest_core differently
# in a fresh CI venv vs a local editable checkout, which made `ruff check .` pass
# locally but fail in CI. Both are our own packages (split across repos).
known-first-party = ["tempestweb", "tempest_core"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
# pywebpush ships no type stubs / py.typed marker.
module = ["pywebpush"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # Treat our own API-rot signals as failures so deprecations can't accrete.
    # ResourceWarning / unraisable GC-timing warnings stay non-fatal: they are
    # nondeterministic and partly upstream (Starlette TestClient sockets).
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
    # Upstream: Starlette's TestClient warns until httpx2 ships; not ours to fix.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]
